--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
@@ -23,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages-1 -d build"
+    "deploy": "gh-pages -b gh-pages-2 -d build"
   },
   "eslintConfig": {
     "extends": [
